# plaited

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: build-and-publish.yml  test-with-coverage.yml  test.yml
knitty/: ast_filter.py  knitty.py
knitty/pandoc_filter_arg/: cli.py
knitty/stitch/: stitch.py
src/plaited/: __init__.py  ast_filter.py  main.py  options.py  plaited.py  self_contained_raw_html_img.py
src/plaited/plait/: __init__.py  plait.py
src/plaited/stitch/: options.py  stitch.py
src/plaited/tools/: tools.py
tests/: kernel.py  plait.py  test_main.py  test_options.py  test_plaited.py  test_stitcher.py
