[metadata]
name = plaited
version = 0.0.1
description = Publish reproducible code notebooks using pandoc and jupyter kernels
long_description = file:README.md
long_description_content_type = text/markdown
author = Jacob Hall
author_email = email@jacobhall.net
url = https://github.com/jacobwhall/plaited
project_urls =
    Bug Tracker = https://github.com/jacobwhall/plaited/issues
license = BSD 3-Clause License
keywords = pandoc, jupyter, notebook
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
# python_requires = >=3.x
install_requires =
    panflute
    ipykernel
    jupyter_client
    nbconvert

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plaited = plaited.plaited:main
